<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linearlayoutinscroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stadtlandkreis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="25sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/bundesland"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bundesland"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/space"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/ableitung"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/abgeleitetvon"
                android:layout_width="270dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:text="@string/space"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/map"
                android:layout_width="wrap_content"
                android:layout_height="450dp"
                android:adjustViewBounds="true"
                android:importantForAccessibility="no"
                android:tag="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/map" />

            <View
                android:id="@+id/locationblob"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/blob"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/map"
                app:layout_constraintStart_toStartOf="@id/map" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <Button
                android:id="@+id/linksquellen"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/not_rounded_bg_linksquellen"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/links_und_quellen"
                android:textColor="@color/yellow"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/maplayers"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_bg_maplayers"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/map_layers"
                android:textColor="@color/yellow"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/linksquellen" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>